--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -1,11 +1,16 @@
 * {
     box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
 }
 
 .main {
+    margin: 2rem;
     padding: 1rem;
+    border: 1px solid rgba(0, 0, 0, 0);
+    border-radius: 1rem;
+    box-shadow: 0 .625rem 1.5625rem rgba(0, 0, 0, .3);
 }
 
-.header .title {
-    text-align: center;
+.js-tilt-glare {
+    border-radius: 1rem;
 }
