--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -5,8 +5,53 @@
 
 }
 
+.header .title {
+    text-align: center;
+    font-family: 'Supreme', sans-serif;
+}
+
 .header .photo {
     width: 14rem;
     height: 14rem;
+
+}
+
+.data {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+}
+
+.datas p {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin: .5rem;
+    font-size: 1.05rem;
+}
+
+.datas p::before {
+    content: '';
+    display: inline-block;
+    width: 1rem;
+    height: 1rem;
+    background-repeat: no-repeat;
+    background-size: contain;
+    margin-right: .5rem;
+}
+
+.datas .job::before {
+    background-image: url(/assets/img/icons/job.svg);
+
+}
+
+.datas .location::before {
+    background-image: url(/assets/img/icons/location.svg);
+
+}
+
+.datas .email::before {
+    background-image: url(/assets/img/icons/email.svg);
 
 }
