--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -2,7 +2,10 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-
+    position: relative;
+    border-radius: 2rem;
+    box-shadow: 0 .625rem 1.5625rem rgba(0, 0, 0, .3);
+    backdrop-filter: blur(20px);
 }
 
 .header .title {
@@ -11,16 +14,18 @@
 }
 
 .header .photo {
-    width: 14rem;
-    height: 14rem;
-
+    width: 12rem;
+    height: 12rem;
+    box-shadow: 0 .625rem 1.5625rem rgba(0, 0, 0, .3);
+border-radius: 50%;
 }
 
-.data {
+.datas {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
     width: 100%;
+
 }
 
 .datas p {
@@ -54,4 +59,40 @@
 .datas .email::before {
     background-image: url(/assets/img/icons/email.svg);
 
+}
+
+@media only screen and (max-width: 768px) {
+    .header .datas {
+        align-items: center;
+    }
+}
+
+@media only screen and (min-width: 768px) {
+    .header {
+        display: grid;
+        grid-template-areas:
+            "photo title"
+            "photo datas"
+        ;
+
+    }
+
+    .header .photo {
+        grid-area: photo;
+        margin: 0 auto;
+    }
+
+    .header .title {
+        grid-area: title;
+        text-align: start;
+        max-width: 290px;
+        margin: 0 auto;
+    }
+
+    .header .datas {
+        grid-area: datas;
+        text-align: start;
+        max-width: 300px;
+        margin: 0 auto;
+    }
 }
