--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -8,7 +8,15 @@ body {
     background-image: url('/assets/img/toolxox.com-enhanced-1wINlpsQn4AiuxH0FT2L9PSj3eqXB6.jpg');
     background-size: cover;
     background-repeat: no-repeat;
-    height: 200vh;
+    height: 120vh;
+}
+
+a {
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: underline;
 }
 
 body:hover {
